fixed DataSource user friendlisd fetching, implemented active view controller

--- a/MoneyPool/Base.lproj/Invitation.storyboard
+++ b/MoneyPool/Base.lproj/Invitation.storyboard
@@ -24,7 +24,7 @@
                                 <rect key="frame" x="0.0" y="54" width="600" height="476"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="70" id="cDJ-dd-keF" customClass="InviteFriendListTableViewCell" customModule="MoneyPool" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="InviteFriendListTableViewCell" rowHeight="70" id="cDJ-dd-keF" customClass="InviteFriendListTableViewCell" customModule="MoneyPool" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="600" height="70"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cDJ-dd-keF" id="7Da-Y2-54x">
