--- a/MoneyPool/Menu.storyboard
+++ b/MoneyPool/Menu.storyboard
@@ -146,14 +146,23 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E5N-X7-Qy8">
+                                <rect key="frame" x="24" y="20" width="39" height="30"/>
+                                <state key="normal" title="Close"/>
+                                <connections>
+                                    <action selector="closeButtonPressed:" destination="ywZ-ZK-68h" eventType="touchUpInside" id="LMS-Ak-agF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="s4t-uz-ets" firstAttribute="leading" secondItem="tsA-q3-Ivk" secondAttribute="leading" id="213-4v-8MO"/>
                             <constraint firstItem="tsA-q3-Ivk" firstAttribute="leading" secondItem="2Ts-GV-kUf" secondAttribute="leading" id="5Hd-is-fRH"/>
                             <constraint firstItem="tsA-q3-Ivk" firstAttribute="top" secondItem="Gxm-3P-aJM" secondAttribute="bottom" constant="20" id="6Um-xg-VyN"/>
+                            <constraint firstItem="E5N-X7-Qy8" firstAttribute="leading" secondItem="2Ts-GV-kUf" secondAttribute="leadingMargin" constant="4" id="SA3-MX-mCw"/>
                             <constraint firstItem="Gxm-3P-aJM" firstAttribute="top" secondItem="Q5i-Zw-eLr" secondAttribute="bottom" id="UFA-3U-naH"/>
                             <constraint firstAttribute="trailing" secondItem="tsA-q3-Ivk" secondAttribute="trailing" id="Zq7-f7-oRa"/>
+                            <constraint firstItem="E5N-X7-Qy8" firstAttribute="top" secondItem="Gxm-3P-aJM" secondAttribute="top" id="djq-Kv-JZl"/>
                             <constraint firstItem="Gxm-3P-aJM" firstAttribute="centerX" secondItem="tsA-q3-Ivk" secondAttribute="centerX" id="kgb-4r-m57"/>
                             <constraint firstItem="s4t-uz-ets" firstAttribute="top" secondItem="tsA-q3-Ivk" secondAttribute="bottom" id="r8t-6m-Qfd"/>
                             <constraint firstItem="s4t-uz-ets" firstAttribute="trailing" secondItem="tsA-q3-Ivk" secondAttribute="trailing" id="sbz-fn-pfT"/>
@@ -161,7 +170,7 @@
                             <constraint firstItem="s4t-uz-ets" firstAttribute="bottom" secondItem="SLT-bT-Egh" secondAttribute="top" id="xsu-Gc-34a"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="C5l-xV-6Ug"/>
+                    <tabBarItem key="tabBarItem" title="Add Friends" id="C5l-xV-6Ug"/>
                     <navigationItem key="navigationItem" title="Add more Friends!" id="1UR-T3-rxh"/>
                     <connections>
                         <outlet property="searchBar" destination="tsA-q3-Ivk" id="rBv-Rh-zod"/>
